--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>au.com.permeance.utility</groupId>
-  <artifactId>permeance-ehcache</artifactId>
+  <artifactId>permeance-ehcache-tools</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>permeance-ehcache</name>
+  <name>permeance-ehcache-tools</name>
   <url>http://maven.apache.org</url>
 
   <properties>
